# SpMM

./: .gitignore  CMakeLists.txt  README.md
datamodel/: CMakeLists.txt
datamodel/include/: adj_edges.h  adj_list.h  adj_matrix_csr.h  adj_matrix_dense.h  adj_matrix_dense_linear.h  data.h
datamodel/src/: adj_edges.cc  adj_list.cc  adj_matrix_csr.cc  adj_matrix_dense.cc  adj_matrix_dense_linear.cc
graph/: test.edges
main/: CMakeLists.txt  main.cc
serial/: CMakeLists.txt
serial/include/: serial_dense_mm.h  serial_spmm.h  test.h
serial/src/: serial_spmm.cc  test.cu
spmm/: CMakeLists.txt
spmm/include/: dense_mm_cuda.h  dense_mm_serial.h  hadamard_product.h  spmm_cuda.h  spmm_serial.h
spmm/src/: dense_mm_cuda.cu  dense_mm_cuda_v2.cu  dense_mm_serial.cc  hadamard_product.cc  spmm_cuda.cu  spmm_cuda_v2.cu  spmm_dense_cuda.cu  spmm_dense_cuda_v2.cu  spmm_serial.cc
test/: CMakeLists.txt
test/include/: test_final.h  test_full.h  test_generate_graph.h  test_hadamard.h  test_simple.h
test/src/: test_final.cc  test_full.cc  test_generate_graph.cc  test_gpu.cu  test_hadamard.cc  test_simple.cc
utils/: CMakeLists.txt
utils/include/: graph_generator.h  timer.h
utils/src/: graph_generator.cc  timer.cu
